--- a/sv_form/package.json
+++ b/sv_form/package.json
@@ -29,6 +29,12 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.20.0",
-		"vite": "^6.2.6"
+		"vite": "^6.2.6",
+		"vite-plugin-devtools-json": "^0.2.0"
+	},
+	"dependencies": {
+		"@types/pouchdb": "^6.4.2",
+		"events": "^3.3.0",
+		"pouchdb": "^9.0.0"
 	}
 }
